use PUG-REST for get_cid

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,10 @@ webchem 0.0.6
 
 NEW FEATURES
 * added cts_to() and cts_from() to retrieve possible ids that can be queried.
-* cts_*(), pp_query(), cir_query() can handle multiple inputs
+* cts_*(), pp_query(), cir_query(), get_cid(), can handle multiple inputs
+
+MINOR IMPROVEMENTS
+* pubchem functions use PUG-REST
 
 BUG FIXES
 
