--- a/NEWS
+++ b/NEWS
@@ -4,9 +4,11 @@ webchem 0.0.6
 NEW FEATURES
 * added cts_to() and cts_from() to retrieve possible ids that can be queried.
 * cts_*(), pp_query(), cir_query(), get_cid(), can handle multiple inputs
+* pc_prop() queries properties from PUG-REST.
+* pc_synonmy() to query synonyms from pubchem
 
 MINOR IMPROVEMENTS
-* pubchem functions use PUG-REST
+* rewrite of pubchem functions using PUG-REST
 
 BUG FIXES
 
