--- a/README.Rmd
+++ b/README.Rmd
@@ -220,8 +220,8 @@ ETOX: Information System Ecotoxicology and Environmental Quality Targets is a da
 First we need to query a substance ID:
 
 ```{r get_etoxid}
-etoxids <- get_etoxid('Triclosan', mult = 'best')
-etoxids
+ids <- get_etoxid('Triclosan', mult = 'best')
+ids
 ```
 `get_etoxid` tries to find the best match for you (check the matched and distance attributes), if multiple hits are found.
 Other options are `mult = 'ask'` to enter a interactive mode, `'na'` to return `NA`, `'all'` to return all hits and `'first'` to return the first hit.
@@ -235,7 +235,7 @@ get_etoxid('Triclosan', mult = 'all')
 With this substance ID we can query further information from ETOX, e.g.:
 
 ```{r etox_basic}
-etox_basic(etoxids$etoxid)
+etox_basic(ids$etoxid)[[1]]
 ```
 
 Which returns CAS, EC and GSBL numbers, as well as a synonym list.
