--- a/README.Rmd
+++ b/README.Rmd
@@ -300,11 +300,14 @@ opsin_query(c('Cyclopropane', 'Octane'))
 The sources provide a lot of informations that can be retrieved using the functions described above. Often only specific inforamtion is needed. 
 Therefore, we added extractor functions for common identifiers.
 
-```{r extractors}
+```{r extractors, error=TRUE}
 wi <- wd_ident("Q408646")
 wi
 cas(wi)
-cas(pan_query('Triclosan'))
+inchikey(wi)
+smiles(wi)
+
+smiles(etox_basic(5564))
 ```
 
 
