--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ NEW FEATURES
 MINOR IMPROVEMENTS
 * rewrite of pubchem functions using PUG-REST
 * chemspider: better use of NA in input (=return NA)
+* more robust matching in get_etoxid
 
 BUG FIXES
 
