--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,19 @@
-webchem 0.0.6
+webchem 0.1.1
+======================
+
+NEW FEATURES
+
+MINOR IMPROVEMENTS
+
+BUG FIXES
+
+DEPRECATED FUNCTIONS
+
+DEFUNCT FUNCTIONS
+
+
+
+webchem 0.1.0
 ======================
 
 NEW FEATURES
