--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ MINOR IMPROVEMENTS
 
 BUG FIXES
 * pc_prop() returned to many rows if last cid supplied was NA
-* Switched to https for NCBI
+* Switched to https for NCBI, chemspider & chemid (Issue #120, reported by @jranke)
 
 DEPRECATED FUNCTIONS
 
