--- a/NEWS
+++ b/NEWS
@@ -2,8 +2,11 @@ webchem 0.1.1
 ======================
 
 NEW FEATURES
+* added ping_pubchem() to check whether pubchem is up & running
+* added cs_web_ping () to check whether the chemspider webpage is functional
 
 MINOR IMPROVEMENTS
+* updated allan wood index
 
 BUG FIXES
 * pc_prop() returned to many rows if last cid supplied was NA
