--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+webchem 0.1.3
+======================
+
+NEW FEATURES
+
+MINOR IMPROVEMENTS
+
+BUG FIXES
+
+DEPRECATED FUNCTIONS
+
+DEFUNCT FUNCTIONS
+
+
+
 webchem 0.1.1
 ======================
 
