--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ NEW FEATURES
 MINOR IMPROVEMENTS
 
 * cs_prop() now also return experimental data for Boiling and Melting Points.
+* pc_synonyms gained an argument 'interactive' to enter an interactive mode for
+  selecting synonyms [isse #129, requested by @Aariq]
 
 BUG FIXES
 
