ci_query did not clean output correctly, skip tests relying on rJava

--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ BUG FIXES
 
 * cs_prop() failed with some CSIDs [isse #127, reported by @Aariq]
 * wd_ident() failed if multiple entries where found. Now returns the first hit only.
+* ci_query() did not return fully cleaned smiles and inchi
 
 DEPRECATED FUNCTIONS
 
