--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+webchem 0.5
+======================
+NEW FEATURES
+
+MINOR IMPROVEMENTS
+
+BUG FIXES
+
+* cs_prop() failed with duplicated return values [issue #148, reported and fixed by @stanstrup]
+
+DEPRECATED FUNCTIONS
+
+DEFUNCT FUNCTIONS
+
+
 webchem 0.4
 ======================
 
