--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,8 @@ MINOR IMPROVEMENTS
 BUG FIXES
 
 * cs_prop() failed with duplicated return values [issue #148, reported and fixed by @stanstrup]
+* pp_query() failed when compound present, but no properties [issue #151, reported and fixed by @stanstrup]
+
 
 DEPRECATED FUNCTIONS
 
