--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ NEW FEATURES
 
 MINOR IMPROVEMENTS
 
+* as.cas() added.
+
 BUG FIXES
 
 * cs_prop() failed with duplicated return values [issue #148, reported and fixed by @stanstrup]
