--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ webchem 0.5
 
 NEW FEATURES
 
-* Retrieve retention indices from NIST (https://webbook.nist.gov) with get_ri() [PR #154, contributed by @Aariq]
+* Retrieve retention indices from NIST (https://webbook.nist.gov) with nist_ri() [PR #154, contributed by @Aariq]
 
 MINOR IMPROVEMENTS
 
