--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,8 @@
 ---
 output:
-  html_document:
-    keep_md: yes
-    self_contained: no
-  pdf_document: default
+  github_document:
+    toc: true
+    toc_depth: 2
 ---
 webchem
 =============
