--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ webchem 0.5
 
 NEW FEATURES
 
-* Retrieve data from ChEBI (https://www.ebi.ac.uk/chebi/) webservice with get_lite_entity() and get_comp_entity(). ChEBI comprises a rich data base on chemicals with bilogical interest [contributed by @andreasLD].
+* Retrieve data from ChEBI (https://www.ebi.ac.uk/chebi/) webservice with chebi_lite_entity() and chebi_comp_entity(). ChEBI comprises a rich data base on chemicals with bilogical interest [contributed by @andreasLD].
 * Retrieve retention indices from NIST (https://webbook.nist.gov) with nist_ri() [PR #154, contributed by @Aariq]
 
 MINOR IMPROVEMENTS
